--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "gulp-watch": "~0.6.5"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": "0.10.22",
+    "npm": "1.3.14"
   },
   "scripts": {
     "start": "node keystone.js"
